#1633 fix handling of replacement of injured keeper by field player (#1634)
Co-authored-by: wsbrenk <zissener-weg-brenk.de>